# devbcn-workshop

./: .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml  api.http
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  package-lock.json  tailwind.config.js
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: button.rs  film_modal.rs  header.rs  mod.rs
shared/: Cargo.toml
shared/src/: models.rs
