[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
log = "0.4.19"
reqwest = { version="0.11.18", features=["json"] }
serde = { version="1.0.183", features=["derive"] }
shared = { path="../shared" }
uuid = { version="1.4.1", features=["serde", "v4", "js"] }
wasm-logger = "0.2.0"
web-sys = "0.3.64"
