[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.26", features=["serde"] }
serde = { version="1.0.183", features=["derive"] }
uuid = { version="1.4.1", features=["serde", "v4", "js"] }
