[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.72"
serde = "1.0.183"
serde_json = "1.0.104"
shared = { path="../../shared" }
sqlx = { version="0.7.1", default-features=false, features=["runtime-tokio", "tls-native-tls", "macros", "postgres", "uuid", "chrono", "json"] }
tracing = "0.1.37"
uuid = { version="1.4.1", features=["serde", "v4", "js"] }

[dev-dependencies]
actix-rt = "2.8.0"
