[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
api-lib = { path="../lib" }
shuttle-actix-web = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-shared-db = { version="0.23.0", features=["postgres"] }
sqlx = { version="0.7.1", default-features=false, features=["runtime-tokio", "tls-native-tls", "macros", "postgres", "uuid", "chrono", "json"] }
tokio = "1.30.0"
tracing = "0.1.37"
